fix(sitecarousel): slightly center options and align

--- a/src/components/SiteCarousel/SiteCarousel.css
+++ b/src/components/SiteCarousel/SiteCarousel.css
@@ -1,6 +1,6 @@
 .siteCarousel {
   position: relative;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
 }
 
